[tool.poetry]
name = "airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["youngkwang.lee <youngkwang.lee@navercorp.com>"]
readme = "README.md"
packages = [{include = "airbnb_clone_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
Pillow = "^9.2.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
